[project]
name="rdns_reaper"
version="0.1.1.rc1"
authors=[
  {name ="Will Mullaney",email="rdns-reaper@mullaneywt.anonaddy.com"}
]
description="Reverse DNS lookup engine"
readme = "README.md"
keywords=["reverse", "dns"]
license={ text="GNU GPL v3.0" }
requires-python=">=3.7"
dependencies=["netaddr>=0.8.0", "pyyaml>=6.0"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Internet",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]



[project.urls]
"Home Page" = "https://github.com/mullaneywt/rdns_reaper"
"Bug Tracker" = "https://github.com/mullaneywt/rdns_reaper/issues"
"Source" = "https://github.com/mullaneywt/rdns_reaper"
"Documentation" = "https://rdns-reaper.readthedocs.io"


[build-system]
#requires = ["setuptools", "virtualenv"]
#build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
packages = ["rdns_reaper"]


[tool.hatch.build.targets.sdist]
exclude = [
  "rdns_reaper/test",
  "/.github",
  "/docs",
  ".gitignore",
  "tox.ini",
  "requirements.txt"
]

[tool.hatch.build.targets.wheel]
packages = ["rdns_reaper"]

[tool.isort]
profile = "black"

[tool.setuptools]
packages = ["rdns_reaper"]

[tool.black]
line-length = 100
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | cleanrun
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
